Colab kullanılarak oluşturuldu

--- a/docs/examples/building_regularization.ipynb
+++ b/docs/examples/building_regularization.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "BbuIaZ0wtWSb"
+        "id": "lV-f8jv19orh"
       },
       "source": [
         "# Building Regularization\n",
@@ -18,7 +18,7 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "Qb9EY90atWSd"
+        "id": "KHvx8sAX9orl"
       },
       "outputs": [],
       "source": [
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "SfMl7AdAtWSe"
+        "id": "q7_SOeJi9oro"
       },
       "source": [
         "## Import package"
@@ -36,14 +36,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
-        "id": "ml0OGD7itWSe",
-        "outputId": "73f535c7-857c-4192-afba-83bf703b7063",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 314
-        }
+        },
+        "id": "GgxgoE3l9oro",
+        "outputId": "fddeab23-fff5-46f7-c6e1-ffded90b7d90"
       },
       "outputs": [
         {
@@ -53,7 +53,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-2-76862300>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mgeoai\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/tmp/ipython-input-3-76862300.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mgeoai\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'geoai'",
             "",
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
@@ -76,7 +76,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EnUoChfFtWSe"
+        "id": "OjRqh9bB9orp"
       },
       "source": [
         "## Download sample data"
@@ -86,7 +86,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "I7y2nWH6tWSf"
+        "id": "y3Bs0Vbi9orp"
       },
       "outputs": [],
       "source": [
@@ -100,7 +100,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "vlNX7liutWSf"
+        "id": "wgW2T2SC9orq"
       },
       "outputs": [],
       "source": [
@@ -112,7 +112,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "XmcbvQfotWSf"
+        "id": "dWAw3Nbh9orq"
       },
       "outputs": [],
       "source": [
@@ -123,7 +123,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Yb7D0c7_tWSf"
+        "id": "fXgxqdei9orr"
       },
       "outputs": [],
       "source": [
@@ -143,7 +143,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bYSTnGl1tWSf"
+        "id": "yiSK4MNE9orr"
       },
       "source": [
         "## Convert raster to vector"
@@ -153,7 +153,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "_5tXDDHhtWSg"
+        "id": "Mf4tGVge9ors"
       },
       "outputs": [],
       "source": [
@@ -164,7 +164,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "40loxK7ntWSg"
+        "id": "Y6Hpcuhy9ors"
       },
       "outputs": [],
       "source": [
@@ -177,7 +177,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "9WghSYkJtWSg"
+        "id": "q-aKTF3T9ors"
       },
       "outputs": [],
       "source": [
@@ -194,7 +194,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rJWX-lOptWSg"
+        "id": "35MkPqYT9ort"
       },
       "source": [
         "## Building regularization"
@@ -204,7 +204,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Tzu0g-ChtWSg"
+        "id": "U8dBhG6v9ort"
       },
       "outputs": [],
       "source": [
@@ -221,7 +221,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "lQLJaXOjtWSg"
+        "id": "k-ZdjWu39ort"
       },
       "outputs": [],
       "source": [
@@ -234,7 +234,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "B1ub9l-3tWSg"
+        "id": "0ZfHJ6mo9ort"
       },
       "outputs": [],
       "source": [
@@ -251,7 +251,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "X5YX7hPltWSg"
+        "id": "vU-CEaMC9oru"
       },
       "source": [
         "## Hybrid regularization"
@@ -261,7 +261,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "fa93WDuGtWSg"
+        "id": "v8MEkxk69oru"
       },
       "outputs": [],
       "source": [
@@ -272,7 +272,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "3BfgOCvJtWSg"
+        "id": "X38zPCz59oru"
       },
       "outputs": [],
       "source": [
@@ -285,7 +285,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "6-iIeDo0tWSg"
+        "id": "moieyYPI9oru"
       },
       "outputs": [],
       "source": [
@@ -302,7 +302,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hUd17a0_tWSg"
+        "id": "raccVPpE9oru"
       },
       "source": [
         "## Adaptive regularization"
@@ -312,7 +312,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "mNVejKVTtWSg"
+        "id": "0YznNZ4m9oru"
       },
       "outputs": [],
       "source": [
@@ -328,7 +328,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "3qJO19_AtWSg"
+        "id": "jPywxgyO9orv"
       },
       "outputs": [],
       "source": [
@@ -341,7 +341,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "MZXamMr3tWSh"
+        "id": "NFT3yT1t9orv"
       },
       "outputs": [],
       "source": [
@@ -358,7 +358,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "n0MpiaZgtWSh"
+        "id": "G8cK9azD9orv"
       },
       "source": [
         "## Compare regularization methods"
@@ -368,7 +368,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "JO_J7KuQtWSh"
+        "id": "6WWZjulv9orv"
       },
       "outputs": [],
       "source": [
@@ -379,7 +379,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "x2XY9RC2tWSh"
+        "id": "W8Zltnpo9orv"
       },
       "outputs": [],
       "source": [
@@ -402,6 +402,56 @@
         "m.add_legend(title=\"Building Footprints\", legend_dict=legend)\n",
         "m"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cb152c27"
+      },
+      "source": [
+        "# %pip install geoai-py"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 314
+        },
+        "id": "1644b1e2",
+        "outputId": "906e499b-8788-4d28-8c1e-495430c9ce10"
+      },
+      "source": [
+        "import geoai"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'geoai'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-5-76862300.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mgeoai\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'geoai'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ],
+          "errorDetails": {
+            "actions": [
+              {
+                "action": "open_url",
+                "actionText": "Open Examples",
+                "url": "/notebooks/snippets/importing_libraries.ipynb"
+              }
+            ]
+          }
+        }
+      ]
     }
   ],
   "metadata": {
@@ -423,7 +473,8 @@
       "version": "3.12.2"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     }
   },
   "nbformat": 4,
